<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DetailFragment" android:id="@+id/linearLayout">
    <TextView
            android:text="@string/name_of_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/date_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:text="@string/location_of_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
    />
    <TextView
            android:text="@string/detail_of_the_event"
            android:layout_width="355dp"
            android:layout_height="372dp"
            android:id="@+id/detail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="140dp" app:layout_constraintTop_toBottomOf="@+id/location"/>
    <Button
            android:text="@string/add_to_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addToCalendar"
            app:layout_constraintTop_toBottomOf="@+id/location" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/detail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>